--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.1.0
+  fluttertoast: ^8.0.7
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  firebase_dynamic_links: ^2.0.6
+  firebase_database: ^7.1.1
+  syncfusion_flutter_charts: ^19.2.46
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +52,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
