--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   firebase_dynamic_links: ^2.0.6
   firebase_database: ^7.1.1
   syncfusion_flutter_charts: ^19.2.46
+  get:
+  shared_preferences: ^2.0.6
+  splash_screen_view: ^3.0.0
+  awesome_dropdown: ^0.0.4
 
 dev_dependencies:
   flutter_test:
