--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   shared_preferences: ^2.0.6
   splash_screen_view: ^3.0.0
   awesome_dropdown: ^0.0.4
+  intl: ^0.17.0
+  custom_navigator: ^0.3.0
+  
 
 dev_dependencies:
   flutter_test:
