--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,22 +32,25 @@ dependencies:
   fluttertoast: ^8.0.7
   firebase_core: ^1.3.0
   firebase_auth: ^1.4.1
-  firebase_dynamic_links: ^2.0.6
-  firebase_database: ^7.1.1
+
   syncfusion_flutter_charts: ^19.2.46
   get:
-  shared_preferences: ^2.0.6
+  
   splash_screen_view: ^3.0.0
   intl: ^0.17.0
   animate_do: ^2.0.0
-  device_preview: ^0.7.4
+  
 
   
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.0"
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
