--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,14 @@ dependencies:
   fluttertoast: ^8.0.7
   firebase_core: ^1.3.0
   firebase_auth: ^1.4.1
-
+  pull_to_refresh: ^2.0.0
   syncfusion_flutter_charts: ^19.2.46
   get:
-  
+  connectivity_alert_widget: ^2.0.0
   splash_screen_view: ^3.0.0
   intl: ^0.17.0
   animate_do: ^2.0.0
+  connectivity: ^3.0.6
   
 
   
