--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
 <uses-permission android:name="android.permission.INTERNET"/>    
    <application
+   android:requestLegacyExternalStorage="true"
         android:label="EPCC"
         android:icon="@mipmap/launcher_icon">
         <activity
