--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   connectivity: ^3.0.6
   animated_splash_screen: ^1.1.0
   shared_preferences: ^2.0.6
+  image_picker: ^0.8.2
+  cached_network_image: ^3.1.0
+  cloud_firestore: ^2.4.0
+  firebase_storage: ^10.0.1
   
 
   
