--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.1.0
   cloud_firestore: ^2.4.0
   firebase_storage: ^10.0.1
+  api_cache_manager: ^1.0.2
   
 
   
