--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.1.0
+  google_fonts: ^3.0.1
   fluttertoast: ^8.0.7
   firebase_core: ^1.3.0
-  firebase_auth: ^1.4.1
+  firebase_auth: ^3.11.2
   pull_to_refresh: ^2.0.0
-  syncfusion_flutter_charts: ^19.2.46
+  syncfusion_flutter_charts: ^20.3.48
   get:
   connectivity_alert_widget: ^2.0.0
   splash_screen_view: ^3.0.0
@@ -44,14 +44,14 @@ dependencies:
   shared_preferences: ^2.0.6
   image_picker: ^0.8.2
   cached_network_image: ^3.1.0
-  cloud_firestore: ^2.4.0
+  cloud_firestore: ^3.5.1
   firebase_storage: ^10.0.1
   api_cache_manager: ^1.0.2
   cache_manager: ^1.0.0+3
 
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.9.0"
+  flutter_launcher_icons: ^0.10.0
   flutter_test:
     sdk: flutter
 flutter_icons:
