--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_auth: ^3.11.2
   pull_to_refresh: ^2.0.0
-  syncfusion_flutter_charts: ^20.3.48
-  get:
+  syncfusion_flutter_charts: 20.1.55
+  get: ^4.6.1
   connectivity_alert_widget: ^2.0.0
   splash_screen_view: ^3.0.0
   intl: ^0.17.0
@@ -49,9 +49,12 @@ dependencies:
   api_cache_manager: ^1.0.2
   cache_manager: ^1.0.0+3
 
-
+dependency_overrides:
+  collection: ^1.16.0
+  firebase_core_platform_interface: 4.5.1
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
+  change_app_package_name: ^1.1.0
   flutter_test:
     sdk: flutter
 flutter_icons:
