--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,32 +16,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
+  google_fonts: ^6.1.0
   fluttertoast: ^8.0.7
-  firebase_core: ^1.3.0
-  firebase_auth: ^3.11.2
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.13.0
   pull_to_refresh: ^2.0.0
-  syncfusion_flutter_charts: 20.1.55
+  syncfusion_flutter_charts: ^23.1.44
   get: ^4.6.1
   connectivity_alert_widget: ^2.0.0
   splash_screen_view: ^3.0.0
-  intl: ^0.17.0
-  animate_do: ^2.0.0
+  intl: ^0.18.1
+  animate_do: ^3.0.2
   connectivity: ^3.0.6
   animated_splash_screen: ^1.1.0
   shared_preferences: ^2.0.6
-  image_picker: ^0.8.6
+  image_picker: ^1.0.4
   cached_network_image: ^3.1.0
-  cloud_firestore: ^3.5.1
-  firebase_storage: ^10.0.1
+  cloud_firestore: ^4.13.0
+  firebase_storage: ^11.5.0
   api_cache_manager: ^1.0.2
   cache_manager: ^1.0.0+3
+  firebase_core_platform_interface: ^5.0.0
 
 dependency_overrides:
   collection: ^1.16.0
-  firebase_core_platform_interface: 4.5.1
 dev_dependencies:
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.11.0
   change_app_package_name: ^1.1.0
   flutter_test:
     sdk: flutter
